--- a/styles/styles.css
+++ b/styles/styles.css
@@ -905,18 +905,23 @@ body {
   }
 }
 .jobs__available {
-  display: flex;
-  align-items: center;
-  margin-top: 32px;
+  display: none;
 }
-.jobs__available-text {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  line-height: 1.375rem;
-  color: #8B8B8B;
-  margin-left: 16px;
-  width: 80px;
+@media (min-width: 768px) {
+  .jobs__available {
+    display: flex;
+    align-items: center;
+    margin-top: 32px;
+  }
+  .jobs__available-text {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1.375rem;
+    color: #8B8B8B;
+    margin-left: 16px;
+    width: 80px;
+  }
 }
 
 .summary__title {
@@ -1120,26 +1125,27 @@ body {
   }
 }
 .project__featured {
-  display: none;
+  position: absolute;
+  left: 24px;
+  bottom: 24px;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 0.625rem;
+  line-height: 0.8125rem;
+  display: inline-block;
+  background-color: #908CFF;
+  padding: 8px 16px;
+  border-radius: 14px;
 }
 @media (min-width: 768px) {
   .project__item {
     position: relative;
   }
   .project__featured {
-    color: #FFFFFF;
-    font-weight: 600;
-    font-size: 0.625rem;
-    line-height: 0.8125rem;
     margin-bottom: 16px;
-    display: inline-block;
-    background-color: #908CFF;
-    padding: 8px 16px;
-    border-radius: 14px;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
-    position: absolute;
     top: 24px;
     left: -24px;
     z-index: 1;
